Finished network layer   (Basic layer, providing operations like read, write, close, ...)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,6 +35,7 @@ add_library(${PROJECT_NAME} STATIC
         src/debug/elf_process.cpp
         src/debug/invoke_addr2line.cpp
         src/debug/simple_err.cpp    src/include/simple_err.h
+        src/network/network_session.cpp src/include/network_session.h
         )
 target_include_directories(${PROJECT_NAME} PUBLIC src/include)
 target_link_libraries(${PROJECT_NAME}      PUBLIC ${LIBELF_LIBRARIES})
@@ -47,7 +48,13 @@ endforeach()
 target_include_directories(${PROJECT_NAME} PUBLIC ${LIBELF_INCLUDE_DIRS})
 target_compile_options(${PROJECT_NAME}     PUBLIC ${LIBELF_CFLAGS_OTHER})
 
-add_executable(${PROJECT_NAME}_exe src/main.cpp)
-target_link_libraries(${PROJECT_NAME}_exe PUBLIC ${PROJECT_NAME})
+# FTP Server and Client
+add_executable(ftp_srv src/exec/ftp_srv.cpp)
+target_link_libraries(ftp_srv PUBLIC ${PROJECT_NAME})
+
+add_executable(ftp_cli src/exec/ftp_cli.cpp)
+target_link_libraries(ftp_cli PUBLIC ${PROJECT_NAME})
 
 _add_test(ftrace    "function trace system")
+_add_test(server    "server pool test")
+_add_test(client    "client test")
